# Kintech_1

./: .claude_context  .gitignore  CLAUDE.md  TESTING_STRATEGY.md  image-converter.js  package-lock.json  package.json
.claude/: context.md  prompts.md  settings.local.json  standards.md  testing.md  web-design.txt
.gemini/: context.md  instructions.md  prompts.md  standards.md  testing.md  web-design.txt
backend/: .env.example  app.py  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini
backend/api/: properties.js
backend/api/tests/: setup.js
backend/database/: luxury_properties.db  properties.js  seed.js
backend/instance/: realestate.db
backend/migrations/versions/: c5981d3fa772_initial_migration_user_and_property_.py
backend/tests/: conftest.py
frontend/: .env.example  db.json  jest.config.js  package-lock.json  package.json
frontend/config/jest/: globalSetup.js
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js  mockData.js  setupTests.js
frontend/src/components/: AdminLayout.js  AdminPropertyList.js  AuthModal.css  AuthModal.js  ColombianSnake.tsx  ContractModal.js  DarkModeToggle.js  Footer.css  Footer.js  Header.js  Hero.js  Home.js  HottestPropertiesCarousel.css  HottestPropertiesCarousel.js  LanguageToggle.js  LikeButton.css  LikeButton.js  LuxurySearchBar.css  LuxurySearchBar.js  LuxurySearchBar.jsx  PropertyCard.js  PropertyDetail.js  PropertyForm.js  RentalCalendar.js  SearchBar.js  (+4 more)
(+85 files in other folders)
