[project]
name = "realestate-backend"
version = "0.1.0"
description = "PrimeProp Real Estate Backend API"
authors = [
    { name = "Alejandro", email = "dev@primeprop.com" }
]
dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.8.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]